# focusguard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  install.bat  install.sh  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
focusguard/: __init__.py  __main__.py  config.py  i18n.py  paths.py
focusguard/locales/: en.py  tr.py
focusguard/modules/: ambient.py  analytics.py  analyzer.py  detection_cache.py  fullscreen.py  gui.py  idle_detector.py  intentions.py  resistance.py  screen_capture.py  session.py  store.py  window_tracker.py
tests/: test_idle_detector.py
